[tool.poetry]
name = "activeloop-langchain-course"
version = "0.1.0"
description = ""
authors = ["Patrick Alves <cpatrickalves@gmail.com>"]
readme = "README.md"
packages = [{include = "activeloop_langchain_course"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.208"
openai = "^0.28.0"
tiktoken = "^0.5.1"
ipykernel = "^6.25.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
